# Connect4Game

./: README.md  credits.md  pyproject.toml  requirements.txt
src/basic_version/: connect4.py
src/core/: board.py  config.py  exceptions.py  game.py  level.py  player.py
src/multiple_pairs_of_clients_version/: client.py  server.py
src/one_pair_of_clients_version/: client.py  server.py
src/pygame_version/: client.py  connect4.py  gamestate.py  server.py  states.py  ui_tools.py  utils.py
